--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -6,8 +6,8 @@ nelmio_api_doc:
       - url: http://127.0.0.1:8000
         description: API over HTTPS
     info:
-      title: Contacts
-      description: Phone Book API
+      title: Phone Book API
+      description: API to handle customers and contacts
       version: 1.0.0
     components:
       securitySchemes:
